Add support for Python 3.11
Changes made:

* Replace usage of Enum plus str mixin with StrEnum, as per
  https://github.com/python/cpython/issues/100458

* Sync "typing_extensions" version between requirements.txt and pyproject.toml

--- a/docs/contributing/charts/how-to-add.mdx
+++ b/docs/contributing/charts/how-to-add.mdx
@@ -8,7 +8,7 @@ sidebarTitle: "Charts"
 Add a new type in [`mage_ai/data_preparation/models/widget/constants.py`](https://github.com/mage-ai/mage-ai/blob/master/mage_ai/data_preparation/models/widget/constants.py):
 
 ```python
-class ChartType(str, Enum):
+class ChartType(StrEnum):
     # ...
     PIE_CHART = 'pie_chart'
 ```
