--- a/docs/developer-ux/code-editor.mdx
+++ b/docs/developer-ux/code-editor.mdx
@@ -63,7 +63,7 @@ You can quickly add blocks of code to your pipeline with these methods:
 
         1. Open the file browser on the Pipeline Editor page.
         1. Click a block file and keep holding down.
-        1. Drag the block file into the center of the page.
+        1. Drag the block file onto the center of the page (the Notebook area).
         1. Release the button and it’ll be added to the pipeline.
 
         <Frame>
@@ -80,7 +80,7 @@ You can quickly add blocks of code to your pipeline with these methods:
         Find existing code and add it to the current pipeline.
 
         <Note>
-            You must 1st enable the feature named <b>Add new block v2</b> in your
+            You must first enable the feature named <b>Add new block v2</b> in your
             [project settings](http://localhost:6789/settings/workspace/preferences).
             This feature is available in standard (batch) pipelines.
 
@@ -104,7 +104,7 @@ You can quickly add blocks of code to your pipeline with these methods:
         </Frame>
 
         <Tip>
-            ⌘ + ⇧ (Command + Shift) keyboard shortcut will instantly focus your typing on the
+            ⌘ + / (Command + Forward Slash) keyboard shortcut will instantly focus your typing on the
             search bar from anywhere on the page (as long as you aren’t already typing in a 
             block of code).
         </Tip>
