changing the image url for discord

--- a/docs/integrations/observability/alerting-discord.mdx
+++ b/docs/integrations/observability/alerting-discord.mdx
@@ -6,7 +6,7 @@ description: "Get status updates in your Discord channel."
 
 <img
   alt="Discord"
-  src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fdiscord_3670157&psig=AOvVaw06jj2nN4iOrkF0F5xTxOcm&ust=1707632828928000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCLDEvpuSoIQDFQAAAAAdAAAAABAD"
+  src="https://cdn-icons-png.flaticon.com/512/2111/2111370.png"
   width="300"
 />
 
