[dy] Update docs link

--- a/docs/production/data-sync/github.mdx
+++ b/docs/production/data-sync/github.mdx
@@ -122,7 +122,7 @@ to perform the necessary git actions.
 <Step title="Add Mage Oauth application">
 
 In order for Mage to authenticate with your GitLab, you will need to add a Mage oauth application.
-You can follow the steps [here](https://docs.gitlab.com/ee/integration/oauth_provider.html#create-an-instance-wide-application)
+You can follow the steps [here](https://docs.gitlab.com/ee/integration/oauth_provider.html)
 to set it up.
 
 Make sure you copy the Application ID and Secret after the oauth app is created.
