[tc] Update community-examples.mdx
Added few new sources and links

--- a/docs/guides/community-examples.mdx
+++ b/docs/guides/community-examples.mdx
@@ -6,6 +6,12 @@ description: "A collection of Mage projects and examples created by our communit
 
 ## Written Tutorials
 
+### [Simplifying Data Pipelines With Mage Data Integrations](https://ethanbrown.substack.com/p/simplifying-data-pipelines-with-mage)
+Ethan Brown introduces Mage Data Integration Blocks, bridging no-code simplicity with standard pipeline capabilities for seamless data integration across various sources. From Postgres to Salesforce, Ethan showcases the effortless process of pulling and leveraging data within standard pipelines, promising streamlined development and efficient syncs. Explore the future of data integration with Mage, where complexity meets accessibility.
+
+### [Mage.ai – Tutorials and Intro](https://janzednicek.cz/en/category/mage-ai-etl-tool/)
+Jan provides a series of tutorials from intro and installation to building pipelines and charts.
+
 ### [How to Streamline Communication in Data Pipelines Using Mage](https://medium.com/@xiaoxugao/1ab2a885dd73)
 
 In her post, Xiaoxu introduces the concept of a _communication lifecycle_ for data pipelines. Proactive feedback to stakeholders is essential for establishing trust and building confidence in data. Xiaoxu demonstrates how Mage's [callbacks](/design/blocks/callbacks) can be used to automate tasks based on block status, reducing the communication lifecycle and establishing a healthy relationship between data owners and consumers.
