[jk] Update docs

--- a/docs/api-reference/backfills/overview.mdx
+++ b/docs/api-reference/backfills/overview.mdx
@@ -57,7 +57,7 @@ description: "Programmatically create multiple pipeline runs to backfill a pipel
 </ResponseField>
 
 <ResponseField name="interval_type" type="string">
-  `second`, `minute`, `hour`, `day`, `week`, `month`, `year`, `custom`
+  `minute`, `hour`, `day`, `week`, `month`, `year`
 </ResponseField>
 
 <ResponseField name="interval_units" type="integer">
