--- a/docs/api-reference/backfills/update-backfill.mdx
+++ b/docs/api-reference/backfills/update-backfill.mdx
@@ -13,7 +13,7 @@ All default attributes for a backfill may be updated in addittion to the followi
   A datetime formatted string representing the end time of the backfill, e.g. `"2023-09-05 23:56:05"`.
 </ParamField>
 <ParamField query="interval_type" type="string">
-  The interval type for the backfill. One of: `second`, `minute`, `hour`, `day`, `week`, `month`, `year`, or `custom`.
+  The interval type for the backfill. One of: `minute`, `hour`, `day`, `week`, `month`, or `year`.
 </ParamField>
 <ParamField query="interval_units" type="integer">
   The number of interval units for the backfill.
