[dy] Update docs

--- a/docs/production/configuring-production-settings/settings-backend.mdx
+++ b/docs/production/configuring-production-settings/settings-backend.mdx
@@ -10,7 +10,7 @@ sidebarTitle: "Settings backend"
 Available in Mage versions >= 0.9.66
 
 Not all Mage settings can be read through a settings backend. You can find a list of settings
-that can be read through a settings backend here:
+that can be read through a settings backend [here](https://github.com/mage-ai/mage-ai/blob/master/mage_ai/settings/keys/__init__.py).
 
 When any settings backend is enabled, Mage will first attempt to read the settings value
 from the settings backend before falling back to environment variables.
