[fa] Fixed default value and corresponding docs

--- a/docs/development/observability/logging.mdx
+++ b/docs/development/observability/logging.mdx
@@ -20,7 +20,7 @@ The plaintext logging format will be used by default. Or it can be set explicitl
 
 By default, the server will log messages in the following format:
 ```
-[%(levelname)s]:[%(name)s]:%(message)s
+%(levelname)s:%(name)s:%(message)s
 ```
 
 It can be customized by setting the `SERVER_LOGGING_FORMAT` environment variable.
