[fa] Fixed logging docs

--- a/docs/development/observability/logging.mdx
+++ b/docs/development/observability/logging.mdx
@@ -23,22 +23,24 @@ By default, the server will log messages in the following format:
 %(levelname)s:%(name)s:%(message)s
 ```
 
-It can be customized by setting the `SERVER_LOGGING_FORMAT` environment variable.
+It can be customized by setting the `SERVER_LOGGING_TEMPLATE` environment variable.
 Example:
 ```
-SERVER_LOGGING_FORMAT=$'%(asctime)s\t[%(name)25.25s]\t%(levelname)5s: %(message)s'
+SERVER_LOGGING_TEMPLATE=$'%(asctime)s\t[%(name)25.25s]\t%(levelname)5s: %(message)s'
 ```
 
-**Important!**
+<Warning>
+    **Important**
 
-Format string with special characters like `\t`, `\n`, etc. can't be passed through `.env` file as they are getting
-escaped.
+    Format string with special characters like `\t`, `\n`, etc. can't be passed through `.env` file as they are getting
+    escaped.
 
-To pass such string you can
-1. Use `export SERVER_LOGGING_FORMAT=$'%(asctime)s\t[%(name)25.25s]\t%(levelname)5s: %(message)s'` syntax for local
-python deployment or docker compose with exported env variables
-2. Use combination of `.env` file and `-e` flag for plain docker deployment
-`docker run -d --env-file .env -e SERVER_LOGGING_TEMPLATE=$'%(asctime)s\t\t[%(name)25.25s]\t%(levelname)5s: %(message)s' mageai/mageai:latest`
+    To pass such string you can
+    1. Use `export SERVER_LOGGING_TEMPLATE=$'%(asctime)s\t[%(name)25.25s]\t%(levelname)5s: %(message)s'` syntax for local
+    python deployment or docker compose with exported env variables
+    2. Use combination of `.env` file and `-e` flag for plain docker deployment
+    `docker run -d --env-file .env -e SERVER_LOGGING_TEMPLATE=$'%(asctime)s\t\t[%(name)25.25s]\t%(levelname)5s: %(message)s' mageai/mageai:latest`
+</Warning>
 
 ### JSON format
 
