[xy] Make path_to_credential optional in gcs logger.

--- a/docs/development/observability/logging.mdx
+++ b/docs/development/observability/logging.mdx
@@ -142,7 +142,7 @@ logging_config:
   type: gcs
   level: INFO
   destination_config:
-    path_to_credentials: <path to gcp credentials json file>
+    path_to_credentials: <(optional) path to gcp credentials json file>
     bucket: <bucket name>
     prefix: <prefix path>
 ```
