--- a/docs/about/releases.mdx
+++ b/docs/about/releases.mdx
@@ -14,6 +14,16 @@ description: "Latest new features and changelog."
 ---
 
 [All releases](https://github.com/mage-ai/mage-ai/releases)
+1. [0.9.68 | Invincible Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.68)
+<iframe
+  width="560"
+  height="315"
+  src="https://www.youtube.com/watch?v=ck1UGjUeGGA"
+  title="YouTube video player"
+  frameborder="0"
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+  allowfullscreen
+></iframe>
 1. [0.9.66 | Shogun Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.66)
 1. [0.9.65 | Demon Slayer Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.65)
 1. [0.9.64 | Maestro Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.64)
