--- a/docs/about/releases.mdx
+++ b/docs/about/releases.mdx
@@ -15,10 +15,11 @@ description: "Latest new features and changelog."
 
 [All releases](https://github.com/mage-ai/mage-ai/releases)
 1. [0.9.68 | Invincible Release](https://github.com/mage-ai/mage-ai/releases/tag/0.9.68)
+
 <iframe
   width="560"
   height="315"
-  src="https://www.youtube.com/watch?v=ck1UGjUeGGA"
+  src="https://www.youtube.com/embed/ck1UGjUeGGA"
   title="YouTube video player"
   frameborder="0"
   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
