[jk] Update docs

--- a/docs/_snippets/contribution-process.mdx
+++ b/docs/_snippets/contribution-process.mdx
@@ -12,8 +12,7 @@
     Add members for review in GitHub, please tag one of the following: 
         - `@wangxiaoyou1993` (backend/IO)
         - `@dy46` (backend)
-        - `@johnson-mage` (frontend)
-        - `@mattppal` (docs/website)
+        - `@johnson-mage` (frontend/docs/website)
         - `@tommydangerous`
     </Step>
 </Steps>
