--- a/docs/contributing/documentation/overview.mdx
+++ b/docs/contributing/documentation/overview.mdx
@@ -18,7 +18,7 @@ All of our docs are written in plain text as Markdown files. If you're not famil
 
 The very simplest way to contribute to the Mage docs is directly in the browser, using GitHub's file editing feature. This is a great way to suggest small edits to existing docs, but it's not the best way to add entirely new docs or complex formatting, images, etc.
 
-To make edits, simply click on the "Suggest Edit" button at the bottom of every page. This will open a new tab with the file you're editing. Make your changes, then click "Commit changes." This will open a new pull request with your changes. Be sure to add appropriate details to your pull request & tag `@wangxiaoyou1993` or `@mattppal`. Once the pull request is merged, your changes will be live on the site!
+To make edits, simply click on the "Suggest Edit" button at the bottom of every page. This will open a new tab with the file you're editing. Make your changes, then click "Commit changes." This will open a new pull request with your changes. Be sure to add appropriate details to your pull request & tag `@wangxiaoyou1993`. Once the pull request is merged, your changes will be live on the site!
 
 <Frame>
   <img src="https://github.com/mage-ai/assets/blob/main/contributing-docs.png?raw=True" />
