--- a/docs/design/core-abstractions.mdx
+++ b/docs/design/core-abstractions.mdx
@@ -22,7 +22,7 @@ Check out our detailed [project structure](/design/abstractions/project-structur
 
 A pipeline contains references to all the blocks of code you want to run, charts for visualizing data, and organizes the dependency between each block of code.
 
-Each pipeline is represented by a YAML file (here's an [example](https://github.com/mage-ai/demo%5Fetl%5Fpipeline/blob/master/pipelines/etl%5Fdemo/metadata.yaml)) in the `pipelines` folder under the Mage project directory.
+Each pipeline is represented by a YAML file (here's an [example](https://github.com/mage-ai/demo_etl_pipeline/blob/master/pipelines/etl_demo/metadata.yaml)) in the `pipelines` folder under the Mage project directory.
 
 <img
   alt="Pipeline"
