[xy] Update Azure secret doc.

--- a/docs/production/deploying-to-cloud/secrets/Azure.mdx
+++ b/docs/production/deploying-to-cloud/secrets/Azure.mdx
@@ -3,6 +3,7 @@ title: "Azure Key Vault"
 sidebarTitle: "Azure"
 ---
 
+### YAML
 To use secrets in YAML files (e.g. in data integration pipelines):
 
 1. Add the following keys and values to your environment variables so that
@@ -22,3 +23,12 @@ Mage can access the Azure Key Vault:
     api_key: "{{ azure_secret_var('API_KEY') }}"
     access_token: "{{ azure_secret_var('ACCESS_TOKEN') }}"
     ```
+
+### Python
+Here is the example python code to get secrets from Azure Key Vault:
+
+```python
+from mage_ai.services.azure.key_vault.key_vault import get_secret
+
+get_secret('secret_name')
+```
