--- a/docs/production/data-sync/version-control.mdx
+++ b/docs/production/data-sync/version-control.mdx
@@ -39,18 +39,27 @@ GitHub Enterprise (GHE) or other providers, you will need to follow the steps be
 authenticate with multiple git providers if you need to. Mage will attempt to use the oauth provider
 based on the URL of the remote.
 
+<Warning>
+
+Mage authenticates with a default GitHub OAuth application that may not be able to access
+your repository depending on the repository or organization settings. If you encounter issues
+accessing your repository after authenticating with GitHub, you may need to create your own
+OAuth application that has access to the repositories you want to work with.
+
+</Warning>
+
 When creating the OAuth app for GHE, BitBucket, or GitLab, you will need to set the authorized
 callback URL to `http(s)://<your-mage-url>/oauth`.
 
 <AccordionGroup>
 
-<Accordion title='Authenticate with GHE'>
+<Accordion title='Authenticate with GitHub or GHE'>
 
 <Steps>
 
-<Step title="Register Mage in GHE">
+<Step title="Register Mage in GitHub">
 
-In order for Mage to authenticate with your GHE host, you will need to add Mage as an
+In order for Mage to authenticate with your GitHub host, you will need to add Mage as an
 authorized oauth application. You can follow the steps [here](https://docs.github.com/en/enterprise-cloud@latest/apps/oauth-apps/building-oauth-apps/creating-an-oauth-app)
 to set it up.
 
@@ -62,15 +71,15 @@ Make sure you copy the client id and client secret after the app is created.
 
 You will need to set the following environment variables in your Mage environment:
 
-1. GHE_HOSTNAME: the hostname of your GHE instance. If you’re using GitHub Enterprise Cloud, you should set this to `github.com`
+1. GHE_HOSTNAME: the hostname of your GitHub instance. If you’re using non-enterprise GitHub or GitHub Enterprise Cloud, you should set this to `github.com`
 2. GHE_CLIENT_ID: the client id you retrieved in the previous step
 3. GHE_CLIENT_SECRET: the client secret you retrieved in the previous step
 
 </Step>
 
-<Step title="Authenticate with GHE">
+<Step title="Authenticate with GitHub">
 
-You should now be able to authenticate with GHE and follow the rest of the steps in this document.
+You should now be able to authenticate with GitHub and follow the rest of the steps in this document.
 
 </Step>
 
