[dy] Update version control documentation

--- a/docs/production/data-sync/version-control.mdx
+++ b/docs/production/data-sync/version-control.mdx
@@ -44,7 +44,9 @@ based on the URL of the remote.
 Mage authenticates with a default GitHub OAuth application that may not be able to access
 your repository depending on the repository or organization settings. If you encounter issues
 accessing your repository after authenticating with GitHub, you may need to create your own
-OAuth application that has access to the repositories you want to work with.
+OAuth application that has access to the repositories you want to work with. You can follow the
+steps in the `Authenticate with GitHub or GHE` section below to connect Mage with your OAuth
+application.
 
 </Warning>
 
