[tc] Update roadmap.mdx
Removing current link to roadmap until 2024 roadmap is available.

--- a/docs/about/roadmap.mdx
+++ b/docs/about/roadmap.mdx
@@ -5,7 +5,6 @@ title: "Roadmap"
 <Card
   title="Roadmap"
   icon="map"
-  href="https://airtable.com/shrJctaGt4tvU27uF/tbl5bIlFkk2KhCpL4"
 >
-  Click here for Mage's Roadmap
+  Mage's 2024 Roadmap coming soon!
 </Card>
